tests/expectations/compiler/statements/non_existant_var_exp_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372005]: Unknown variable `z`
    --> compiler-test:5:23
     |
   5 |     \tlet b: u8 = 1u8**z;
     |                       ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
